@@ -13,6 +13,8 @@
 * Add - Added the groups_leave_submit_redirect filter.
 * Dev - Instances of using proper API methods instead of supermagic properties to obtain data.
 * Dev - Revised for PHPStan validation (rules via phpstan.neon).
+* Dev - Updated Groups_User to provide expected return type Groups_Capability[] instead of string[] when asking for capabilities_deep.
+* Dev - API improvement, added additional getters and setters to cache object, added key type checks.
 
 2025-04-20 - version 3.5.0
 * Update - WordPress 6.8 compatible.
